--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,10 +17,8 @@ jobs:
     - uses: cachix/cachix-action@v12
       with:
         name: devenv
-    - name: Install devenv.sh
-      run: nix profile install tarball+https://install.devenv.sh/latest
     - name: Build a binary wheel and a source tarball
-      run: devenv shell python3 -m build
+      run: nix develop --impure . -c python3 -m build"
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
       with:
