--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
       with:
         name: devenv
     - name: Build a binary wheel and a source tarball
-      run: nix develop --impure . -c python3 -m build"
+      run: nix develop --impure . -c python3 -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
       with:
