--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         name: devenv
     - name: Run tests
       run: |
-        nix develop --impure .#{{ matrix.python }} -c tox -e py{{ matrix.python }}
+        nix develop --impure .#${{ matrix.python }} -c tox -e py${{ matrix.python }}
 
   pre-commit:
     runs-on: ubuntu-latest
