--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,8 @@ sources = ["src"]
 
 [tool.hatch.version]
 source = "vcs"
+[tool.hatch.version.raw-options]
+local_scheme = "no-local-version"
 
 [tool.pytest.ini_options]
 pytester_example_dir = "tests/examples/"
