Let tox install specific version of pytest

--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,10 @@ skip_missing_interpreters = true
 [testenv]
 commands = pytest {posargs}
 description = Run pytest
+deps =
+    pytest
+    py11-pytest3: pytest>=3.8,<4
+    py11-pytest4: pytest>=4,<5
+    py11-pytest5: pytest>=5,<6
+    py11-pytest6: pytest>=6,<7
+    py11-pytest7: pytest>=7,<8
