--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,13 +42,13 @@ jobs:
         name: devenv
     - name: Run tests
       run: |
-        cat <<EOF >test.sh
+        cat <<'EOF' >test.sh
         if [[ $PYTEST_VERSION == '*' ]]; then
-          pip install --upgrade pytest
+          testenv=py$PYTHON_VERSION
         else
-          pip install pytest==$PYTEST_VERSION
+          testenv=py$PYTHON_VERSION-pytest$PYTEST_VERSION
         fi
-        tox -e py$PYTHON_VERSION
+        tox -e $testenv
         EOF
         nix develop --impure .#$PYTHON_VERSION -c bash -e test.sh
       env:
