--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310, py311, py312
+envlist = py38,py39,py310,py311,py312,py312-pytest{3,4,5,6,7}
 
 skip_missing_interpreters = true
 
@@ -8,8 +8,8 @@ commands = pytest {posargs}
 description = Run pytest
 deps =
     pytest
-    py11-pytest3: pytest>=3.8,<4
-    py11-pytest4: pytest>=4,<5
-    py11-pytest5: pytest>=5,<6
-    py11-pytest6: pytest>=6,<7
-    py11-pytest7: pytest>=7,<8
+    pytest3: pytest>=3.8,<4
+    pytest4: pytest>=4,<5
+    pytest5: pytest>=5,<6
+    pytest6: pytest>=6,<7
+    pytest7: pytest>=7,<8
