--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38,py39,py310,py311,py312,py312-pytest{3,4,5,6,7}
+envlist = py{38,39,310,311,312}-pytest{3,4,5,6,7}
 
 skip_missing_interpreters = true
 
