--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
     - uses: cachix/cachix-action@v12
       with:
         name: devenv
+        extraPullNames: nixpkgs-python
     - name: Build a binary wheel and a source tarball
       run: nix develop --impure . -c python3 -m build
     - name: Store the distribution packages
