Add --accept-flake-config to build step

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,7 @@ jobs:
         name: devenv
         extraPullNames: nixpkgs-python
     - name: Build a binary wheel and a source tarball
-      run: nix develop --impure . -c python3 -m build
+      run: nix develop --accept-flake-config --impure . -c python3 -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
       with:
